--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<header id="home">
 			<div class="container">	
 				<nav class="navbar">
-					<h2><a href="#home">Sujan<span>.</span></a></h2>
+					<h2><a href="#home">Su<span>.</span></a></h2>
 					<a href="#" class="toggle-button">
 						<span class="bar"></span>
 						<span class="bar"></span>
