--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon-32x32.png">
 	<script src="script.js" defer></script>
 	<title>Sujan Ban - Portfolio</title>
 </head>
