--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 							</div>
 						</div>
 					
-					<form action="mail.php" method="post">
+					<form action="https://formsubmit.co/bansujan@email.com" method="POST" />>
 							<div class="contactform">
 								<div class="row">
 									<div class="col-5">
