--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 							<div class="contactform">
 								<div class="row">
 									<div class="col-5">
-										<input type="text" name="your-name" placeholder="Your Name">
+										<input type="text" name="name" placeholder="Your Name">
 									</div>
 									<div class="col-6">
 										<input type="email" name="email"  placeholder="Your Email">
