--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
 									<div class="col-5">
 										<input type="text" name="name" placeholder="Your Name">
 									</div>
+									<input type="hidden" name="_captcha" value="false">
 									<div class="col-6">
 										<input type="email" name="email"  placeholder="Your Email">
 									</div>
