--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
 										<input type="text" name="name" placeholder="Your Name">
 									</div>
 									<input type="hidden" name="_captcha" value="false">
-									<input type="hidden" name="_autoresponse" value="<h1>thank you for Contacting us.</h1> We will be soon contacting you back.">
+									<input type="hidden" name="_autoresponse" value="thank you for Contacting us. We will be soon contacting you back.">
 									<div class="col-6">
-										<input type="email" name="email"  placeholder="Your Email">
+										<input type="email" name="email"  placeholder="Email Address">
 									</div>
 									<div class="col-7">
 										<input type="text" name="subject"  placeholder="Your Subject">
