--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
 									<div class="col-5">
 										<input type="text" name="name" placeholder="Your Name">
 									</div>
+									<input type="hidden" name="_next" value="https://www.sujanban.com.np/">
 									<input type="hidden" name="_captcha" value="false">
 									<input type="hidden" name="_autoresponse" value="thank you for Contacting us. We will be soon contacting you back.">
 									<div class="col-6">
