--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							</div>
 							<div class="col-2">
 								<h1>I'm Sujan Ban</h1>
-								<p>I am a web designer and Front end Developer from Morang, Nepal who loves Design and the Internet Sphere.<br><br>A whizz at website and UI design,front end Development,Branding,Art design and Wordpress. Always on the lookout for exciting projects to work on.</p>
+								<p>I am a web designer and Front end Developer from Nepal who loves Design and the Internet Sphere.<br><br>A whizz at website and UI design,front end Development,Branding,Art design and Wordpress. Always on the lookout for exciting projects to work on.</p>
 								<div class="social-icon">
 								<a href="https://www.facebook.com/profile.php?id=100008615196537" target="_blank"><img src="https://img.icons8.com/nolan/64/facebook.png" width="25" /></a>
 								<a href="https://twitter.com/ban_sujan" target="_blank"><img src="https://img.icons8.com/nolan/64/twitter.png"width="25"/></a>
