--- a/index.html
+++ b/index.html
@@ -164,13 +164,13 @@
 									<input type="hidden" name="_captcha" value="false">
 									<input type="hidden" name="_autoresponse" value="thank you for Contacting us. We will be soon contacting you back.">
 									<div class="col-6">
-										<input type="email" name="email"  placeholder="Email Address">
+										<input type="email" name="email"  placeholder="Email Address" required>
 									</div>
 									<div class="col-7">
 										<input type="text" name="subject"  placeholder="Your Subject">
 									</div>
 									<div class="col-8">
-											<textarea name="textarea"  placeholder="Your Message"></textarea>
+											<textarea name="textarea"  placeholder="Your Message" required></textarea>
 									</div>
 									<button>
 											<input type="submit" value="Send Message" >
