--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
 						<div class="row">
 							<div class="col-3">
 								<div class="icon">
-									<img src="https://img.icons8.com/nolan/64/backend-development.png"/>
+									<img src="https://img.icons8.com/nolan/64/web-design.png"/>
 								</div>
-								<h3>Web Development</h3>
+								<h3>Web Design</h3>
 								<p>Develop you a Professional Responsive website using HTML, CSS , and Javascript, Provide you fast, interactive sites. This also may include API's or other integrations.</p>
 							</div>
 							<div class="col-3">
 								<div class="icon">
-									<img src="https://img.icons8.com/nolan/64/backend-development.png"/>
+									<img src="https://img.icons8.com/nolan/64/windows10-personalization.png"/>
 								</div>
 								<h3>UI UX Design</h3>
 								<p>UI/UX involves planning and iterating a site's structure and layout. Once the proper information architecture is in place, I design the visual layer to create a beautiful user experience.</p>
@@ -95,7 +95,7 @@
 							</div>
 							<div class="col-3">
 								<div class="icon">
-									<img src="https://img.icons8.com/nolan/64/backend-development.png"/>
+									<img src="https://img.icons8.com/nolan/64/telegram-app.png"/>
 								</div>
 								<h3>App Development</h3>
 								<p>Designs, creates, and updates mobile applications, whether on Android or iOS  such as personal digital assistants, enterprise digital assistants or mobile phones</p>
