--- a/index.html
+++ b/index.html
@@ -203,10 +203,19 @@
 				</footer>
 
 
-</body>
-</html>
-   
 
+   
+<!------------------------------------------------------------ Javascript ---------------------------------------->
+	
+	<script type="text/javascript" src="vanilla-tilt.js"></script>
+		<script>
+			VanillaTilt.init(document.querySelectorAll(".col-3"),{
+		max: 25,
+		speed: 400,
+		glare: true,
+		"max-glare": 1,
+	});
+		</script>
 
 </body>
 </html>
