--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 	<section class="showcase">
 		<div class="showcase-content">
 			<div>
-				<h1><br><br>HI There!</h1>
-				<p>I,m Sujan, professional web developer with long time experience in this field.</p>
+				<h1>Hi There!</h1>
+				<p>I am Sujan Ban, professional front end/web developer.</p>
 				<a href="#about" class="btn">Learn More</a>
 			</div>
 		</div>
