--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
    
 <!------------------------------------------------------------ Javascript ---------------------------------------->
 	<!-------setting uo dynamic date--------------------->
-	<script>
+<!-- 	<script>
 	let date = new Date();
 	let year = date.getFullYear();
 	document.getElementById("currentDate").innerHTML = year;
@@ -226,7 +226,7 @@
 		glare: true,
 		"max-glare": 1,
 	});
-		</script>
+		</script> -->
 
 </body>
 </html>
