updated Services Section

--- a/index.html
+++ b/index.html
@@ -95,10 +95,11 @@
 							</div>
 							<div class="col-3">
 								<div class="icon">
-									<img src="https://img.icons8.com/nolan/64/telegram-app.png"/>
+<!-- 									<img src="https://img.icons8.com/nolan/64/telegram-app.png"/> -->
+									<img src="https://img.icons8.com/nolan/64/hand-with-pen.png"/>
 								</div>
-								<h3>App Development</h3>
-								<p>Designs, creates, and updates mobile applications, whether on Android or iOS  such as personal digital assistants, enterprise digital assistants or mobile phones</p>
+								<h3>Content Writing</h3>
+								<p>Write meaningfull, high quality SEO Friendly Content for your blog website. Experienced in working with Wordpress and SEO Settings as well</p>
 								<!-----------------<a href="" class="btn">Learn More &#8594;</a>----------------------->
 							</div>
 						</div>
